--- a/Code/cleaning.ipynb
+++ b/Code/cleaning.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -186,18 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_entries(file_name, flag):\n",
+    "def count_entries(dataset, file_name, flag):\n",
     "    with open(file_name, 'w', newline='') as file:\n",
     "        writer = csv.writer(file)\n",
     "        writer.writerow([\"Month\",\"No Of Entries\",\"No Of Cols\"])\n",
     "\n",
     "        total = 0\n",
     "\n",
-    "        for month, df in data.items():\n",
+    "        for month, df in dataset.items():\n",
     "            if flag:\n",
     "                df = df.drop_duplicates()\n",
     "                \n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
     }
    ],
    "source": [
-    "count_entries(\"Original_BikeRides.csv\", False)"
+    "count_entries(data, \"Original_BikeRides.csv\", False)"
    ]
   },
   {
@@ -268,7 +268,7 @@
     }
    ],
    "source": [
-    "count_entries(\"BikeRides_without_Duplicates.csv\", True)"
+    "count_entries(data, \"BikeRides_without_Duplicates.csv\", True)"
    ]
   },
   {
@@ -288,24 +288,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def check_NAN():\n",
-    "    with open(\"NaN_Percentages.csv\", 'w', newline='') as file:\n",
+    "def check_NAN(dataset, filename):\n",
+    "    with open(filename, 'w', newline='') as file:\n",
     "        writer = csv.writer(file)\n",
     "\n",
-    "        for month, df in data.items():\n",
+    "        for month, df in dataset.items():\n",
     "            if month == 'January':\n",
+    "                # if the month is January add the word \"Month\" to column names\n",
     "                column_names = df.columns.insert(0, \"Month\")\n",
-    "                #print(column_names)\n",
     "                writer.writerow(column_names)\n",
     "            \n",
     "            percentage = df.isna().sum()*100/len(df)\n",
-    "            #y = percentage.apply(lambda x: str(int(x))+\"%\" if x > 1 else 0).values\n",
-    "            y = percentage.apply(lambda x: str(int(x))+\"%\" if x > 1 else (\"< 1%\" if x > 0 else 0)).values\n",
+    "            y = percentage.apply(lambda x: str(int(x))+\"%\" if x > 1 else (\"< 1%\" if x > 0 else str(0))).values\n",
     "            values = np.insert(y, 0, month)\n",
     "            print(values)\n",
     "            writer.writerow(values)\n",
@@ -314,29 +313,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['January' 0 0 0 0 '14%' '14%' '14%' '14%' 0 0 '< 1%' '< 1%' 0]\n",
-      "['February' 0 0 0 0 '13%' '13%' '14%' '14%' 0 0 '< 1%' '< 1%' 0]\n",
-      "['March' 0 0 0 0 '13%' '13%' '14%' '14%' 0 0 '< 1%' '< 1%' 0]\n",
-      "['April' 0 0 0 0 '14%' '14%' '16%' '16%' 0 0 '< 1%' '< 1%' 0]\n",
-      "['May' 0 0 0 0 '14%' '14%' '15%' '15%' 0 0 '< 1%' '< 1%' 0]\n",
-      "['June' 0 0 0 0 '16%' '16%' '17%' '17%' 0 0 '< 1%' '< 1%' 0]\n",
-      "['July' 0 0 0 0 '16%' '16%' '16%' '16%' 0 0 '< 1%' '< 1%' 0]\n",
-      "['August' 0 0 0 0 '15%' '15%' '16%' '16%' 0 0 '< 1%' '< 1%' 0]\n",
-      "['September' 0 0 0 0 '15%' '15%' '16%' '16%' 0 0 '< 1%' '< 1%' 0]\n",
-      "['October' 0 0 0 0 '15%' '15%' '16%' '16%' 0 0 '< 1%' '< 1%' 0]\n",
-      "['November' 0 0 0 0 '15%' '15%' '15%' '15%' 0 0 '< 1%' '< 1%' 0]\n"
+      "['January' '0' '0' '0' '0' '0']\n",
+      "['February' '0' '0' '0' '0' '0']\n",
+      "['March' '0' '0' '0' '0' '0']\n",
+      "['April' '0' '0' '0' '0' '0']\n",
+      "['May' '0' '0' '0' '0' '0']\n",
+      "['June' '0' '0' '0' '0' '0']\n",
+      "['July' '0' '0' '0' '0' '0']\n",
+      "['August' '0' '0' '0' '0' '0']\n",
+      "['September' '0' '0' '0' '0' '0']\n",
+      "['October' '0' '0' '0' '0' '0']\n",
+      "['November' '0' '0' '0' '0' '0']\n"
      ]
     }
    ],
    "source": [
-    "check_NAN()"
+    "check_NAN(data, \"NaN_Percentages_Orig.csv\")"
    ]
   },
   {
@@ -348,25 +347,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def drops_NANs(dataframe):\n",
+    "def drops_NANs(dataset):\n",
     "    col_to_drop = ['start_station_name', 'start_station_id', 'end_station_name', 'end_station_id', 'start_lat', 'start_lng', 'end_lat', 'end_lng']\n",
+    "    clean_data = {}\n",
     "\n",
-    "    for _, df in dataframe.items():\n",
+    "    for month, df in dataset.items():\n",
     "        #print(\"shape before\",df.shape)\n",
-    "        df.drop(columns = col_to_drop, inplace=True) # drop column\n",
+    "        clean_data[month] = df.drop(columns = col_to_drop) # drop columns\n",
     "        #print(\"shape after\",df.shape)\n",
     "        #df.fillna('') # fill NaN\n",
     "        #df.dropnna(subset = \"Column Name\", inplace=True) # drop rows where column_name has NaN\n",
-    "        "
+    "        \n",
+    "    return clean_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -378,17 +379,15 @@
     }
    ],
    "source": [
-    "#num = [df.shape for _,df in data.items()]\n",
-    "#print(num)\n",
-    "#data = read_data(original_dir)\n",
-    "drops_NANs(data)\n",
-    "num = [df.shape for _,df in data.items()]\n",
-    "print(num)"
+    "cleaned_data = drops_NANs(data)\n",
+    "\n",
+    "newshape = [df.shape for _,df in cleaned_data.items()]\n",
+    "print(newshape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +411,34 @@
     }
    ],
    "source": [
-    "count_entries(\"BikeRides_NaNsRemoved.csv\", False)"
+    "count_entries(cleaned_data, \"BikeRides_NaNsRemoved.csv\", False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['January' '0' '0' '0' '0' '0']\n",
+      "['February' '0' '0' '0' '0' '0']\n",
+      "['March' '0' '0' '0' '0' '0']\n",
+      "['April' '0' '0' '0' '0' '0']\n",
+      "['May' '0' '0' '0' '0' '0']\n",
+      "['June' '0' '0' '0' '0' '0']\n",
+      "['July' '0' '0' '0' '0' '0']\n",
+      "['August' '0' '0' '0' '0' '0']\n",
+      "['September' '0' '0' '0' '0' '0']\n",
+      "['October' '0' '0' '0' '0' '0']\n",
+      "['November' '0' '0' '0' '0' '0']\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_NAN(cleaned_data, \"NaN_Percentages_Clean.csv\")"
    ]
   },
   {
