--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -23,13 +23,13 @@
 \date{}
 \maketitle
 
-This report provides the results as well as the step-by-step explanation of the data analysis performed for a bike-sharing case study. The data belongs to a bike-sharing company that has two kinds of users: annual members and casual riders. The goal of the case study was to identify how annual members and casual riders use the bikes differently in order to help the stake-holders decide whether or not to target converting casual riders into annual members in the next marketing campaign. The data used in this case study was from January-November 2023. Each month's data was stored in a csv file, and was downloaded from \url{https://divvy-tripdata.s3.amazonaws.com/index.html}, and Python was used to perform the analysis.
+This report provides the results and step-by-step explanation of the data analysis performed for a bike-sharing case study. The data belongs to a bike-sharing company that has two kinds of users: annual members and casual riders. The goal of the study was to identify how annual members and casual riders use the bikes differently in order to help the stake-holders decide whether or not to target converting casual riders into annual members in the next marketing campaign. Python was used to perform the analysis using data collected from January-November 2023 and downloaded from \url{https://divvy-tripdata.s3.amazonaws.com/index.html}.
 
 \section*{Dataset exploration \& cleaning:}
 The code that was used to perform the data exploration can be found in the Jupyter Notebook \href{https://github.com/SummerKassem/BikeShareCS/blob/main/Code/cleaning.ipynb}{cleaning.ipynb}. The main functions are explained below:
 \begin{itemize}
 	\item \textit{read\_data}:\\
-	Here the .csv file for the bike rides of each month is read and stored into a dictionary called “data”. Each element in the dictionary has a key (the name of the month) and a value (the panada dataframe that holds the csv entries). This simplifies the access of the entries for each corresponding month, by using the month as the key (e.g. data[“May”] retrieves the dataframe that holds the entries from May). In Figure \ref{fig1} we can see the first and last 5 entries of bike rides from May:
+	Here the .csv file for the bike rides of each month is read and stored into a dictionary called “data”. Each element in the dictionary has a key (the name of the month) and a value (the panada dataframe that holds the data entries). This simplifies the access of the entries for each corresponding month, by using the month as the key (e.g. data[“May”] retrieves the dataframe that holds the entries from May). In Figure \ref{fig1} we can see the first and last 5 entries of bike rides from May:
 
 	\begin{figure}[h]
 	\hspace{-1.8cm}
@@ -39,7 +39,7 @@ The code that was used to perform the data exploration can be found in the Jupyt
 	\end{figure}
 	\pagebreak
 	
-	From the entries we can see that the data for May consists of 13 columns: 1) ride id, 2) the type of bike, 3-4) date and time for the start and end of the ride, 5-12) the name, id, latitude and longitude of the start and end stations, and finally 13) whether the user was a casual rider or a member. In order to explore the dataset a bit further, the pandas method \textit{nunique()} is used to return the number of unique values for each column in data[``May"]. The output is shown in Figure \ref{fig2}:
+	From the entries we can see that the data consists of 13 columns: 1) ride id, 2) the type of bike, 3-4) date and time for the start and end of the ride, 5-12) the name, id, latitude and longitude of the start and end stations, and finally 13) whether the user was a casual rider or a member. In order to explore the dataset a bit further, the number of unique values for each column in data[``May"] is calculated and shown in Figure \ref{fig2}:
 	
 	\begin{figure}[h]
 	\centering
@@ -48,7 +48,7 @@ The code that was used to perform the data exploration can be found in the Jupyt
 	\label{fig2}
 	\end{figure}
 	
-	As is expected, the columns \textit{rideable\_type} and \textit{member\_casual} have a small number of unique values, whereas the rest of the columns do not. The panadas method \textit{unique()} is then be used to find the unique values in these two columns:  
+	As is expected, the columns \textit{rideable\_type} and \textit{member\_casual} have a small number of unique values, whereas the rest of the columns do not. The unique values in these two columns are:  
 	
 	\begin{itemize}
 	\item \textit{rideable\_type}: [electric\_bike, classic\_bike, docked\_bike]
@@ -56,7 +56,7 @@ The code that was used to perform the data exploration can be found in the Jupyt
 	\end{itemize}
 	
 	\item \textit{count\_entries}:\\
-	After the dataset is read into the dataframes, the method \textit{count\_entries} is used to collect further information about the dataset. It finds the number of entries per file as well as the number of columns. This is done in order to check that the data format is consistent across the different files. Next, the method calculates the total number of bike rides in the entire dataset. There is an option within the method to remove duplicates. Therefore, the method is first called with the remove duplicates option deactivated, in order to get a preliminary feel of the dataset. And then the method is called again with the remove duplicates option activated. The results are then written to output files which are shown in Figure \ref{fig3}. 
+	After the csv files are read into the dataframes, the method \textit{count\_entries} is used to collect further information about the dataset. It finds the number of entries per file as well as the number of columns. This is done in order to check that the data format is consistent across the different files. Next, the method calculates the total number of bike rides in the entire dataset. There is an option within the method to remove duplicates. Therefore, the method is first called with the remove duplicates option deactivated, in order to get a preliminary feel of the dataset. And then the method is called again with the remove duplicates option activated. The results are then written to output files which are shown in Figure \ref{fig3}. 
 	
 	\begin{figure}[h]
 	\centering
@@ -76,11 +76,11 @@ The code that was used to perform the data exploration can be found in the Jupyt
 On the left is the result of running the method without removing duplicates, and on the right is the result after removing duplicates. We can see that all the files have the same number of columns, which is a good preliminary indicator of the consistency of data across the months. In total the dataset contains almost 5.5 Million entries, with an average of approximately 500,000 entries per month. From January to March the number of rides is relatively lower than the average, which is expected as these are cold months. This is confirmed by the peak in the number of rides during the Summer months June to August. The number of entries before and after removing duplicates is identical, therefore the original dataset did not have any duplicates. \\
 
 	\item \textit{check\_NAN}:\\
-	Given that a brief look at the entries from May already showed a couple of NaN values, this method calculates the percentage of NaN values (Figure \ref{fig1} \textit{end\_station\_name} \textit{end\_station\_id}). The number of null values for each column is calculated using the pandas function \textit{isna()}. The percentage of null values for each column and month is shown in Figure \ref{fig4}. As we can see the columns \textit{start\_station\_name}, \textit{start\_station\_id}, \textit{end\_station\_name}, \textit{end\_station\_id} in every month have 13-17\% null values. The columns \textit{end\_lat} and \textit{end\_long} have less than 1\% null values. 
+	Given that a brief look at the entries from May already showed a couple of NaN values (Figure \ref{fig1} \textit{end\_station\_name}, and \textit{end\_station\_id}), the method \textit{check\_NAN} calculates the percentage of NaN values for each column and month. The results are shown in Figure \ref{fig4}. As we can see the columns \textit{start\_station\_name}, \textit{start\_station\_id}, \textit{end\_station\_name}, \textit{end\_station\_id} in every month have 13-17\% null values. The columns \textit{end\_lat} and \textit{end\_long} have less than 1\% null values. 
 	
 	\begin{figure}[h]
 	%\hspace{-1.8cm}
-	\includegraphics[width=6.5 in, height = 2 in]{imgNAN.png}
+	\includegraphics[width=6.5 in, height = 2.3 in]{imgNAN.png}
 	\caption{Percentage of null values for each column across the various months}
 	\label{fig4}
 	\end{figure}
@@ -89,10 +89,25 @@ On the left is the result of running the method without removing duplicates, and
 	After exploring the dataset, we can see that the extractable information can be divided into information about the:
 	\begin{enumerate} 
 	\item rider (casual/member)
-	\item bike (type of bike used)
+	\item bike (electric/classic/docked)
 	\item ride (length, date, location)
 	\end{enumerate}
-Since, the goal of the analysis is to find out how casual riders differ from members, it seems that the ride location is not of high relevance. It would have been important if for example the goal of the analysis was to find out whether more stations should be added and where to do so. However, in this case, and given that the locations seem to contain null values, it is safer to drop these columns. The column \textit{ride\_id} also does not provide any valuable information for the current analysis. Therefore, the relevant columns needed from this point onwards are the: \textit{rideable\_type}, \textit{started\_at}, \textit{ended\_at}, \textit{member\_casual}. So the first task performed by the method \textit{clean\_data} is to drop the columns that are no longer needed. Next, is data formatting. A quick check shows that the columns \textit{started\_at} and \textit{ended\_at} are stored as a strings of characters. Therefore, the second thing done by the method \textit{clean\_data} is to convert these columns into a datetime format and store the new dataset as \textit{cleaned\_data}. In order to ensure that the new dataset has the correct shape, the method \textit{count\_entries} is called once again and used to compare the cleaned dataset to the original one. The result is shown in Figure \ref{fig5}.
+Since, the goal of the analysis is to find out how casual riders differ from members, it seems that the all information is relevant to the analysis, with the exception of the ride location. This geographical location would have been important if for example the goal of the analysis was to find out whether more stations should be added and where to do so. Therefore, since the locations seem to be irrelevant and contain null values, it is safer to drop these columns rather than drop the entries that contain null values. The column \textit{ride\_id} also does not provide any valuable information for the current analysis. Thus, the relevant columns needed from this point onwards are the: \textit{rideable\_type}, \textit{started\_at}, \textit{ended\_at}, \textit{member\_casual}. So the first task performed by the method \textit{clean\_data} is to drop the columns that are no longer needed. 
+
+
+Next, is data formatting. We have already looked at the columns \textit{rideable\_type} and \textit{member\_casual}, and saw that they have the expected values. As for the columns \textit{started\_at} and \textit{ended\_at}, a quick check shows that these columns are stored as strings of characters. So first, they are converted into a datetime format. Second, we need to check whether the \textit{ended\_at} time always comes after \textit{started\_at} time. By adding a column \textit{started\_before\_ended} which is True if the ride time ended before it started, and False otherwise. We can then filter using this column to see when it is True. The result for the month of May is shown in Figure \ref{fig8}.
+
+	\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.6]{imgNEG.png}
+	\caption{Entries in May when the ended\_at time is before the started\_at time}
+	\label{fig8}
+	\end{figure}
+
+Looking at the entries in Figure \ref{fig8}, we can see that indeed there are cases when the \textit{ended\_at} time is before the \textit{started\_at} time. It can be that in these incidents the start and end time were switched due to some glitch, perhaps the bike rental time being only a few seconds (shorter than the server response time). In the entire dataset of approximately 5.5 Million entries, there is a total of 262 entries that have this issue. Since, the dataset is large, we can simply drop these entries.
+
+
+Finally, after dropping the columns related to location, and the entries with the switched times, the new dataset is stored as \textit{cleaned\_data}. In order to ensure that the new dataset has the correct shape, the method \textit{count\_entries} is called once again and used to compare the cleaned dataset to the original one. The result is shown in Figure \ref{fig5}.
 	
 	\begin{figure}[h]
 	\centering
@@ -108,7 +123,7 @@ Since, the goal of the analysis is to find out how casual riders differ from mem
 	\label{fig5}
 	\end{figure}
 	
-	As expected only the number of columns has changed (from 13 to 4), and the number of entries remains the same. As a final check, the method \textit{check\_NAN} is applied to the cleaned data, the result is as expected and is shown in Figure \ref{fig6}:
+	As we can see only the number of columns has changed (from 13 to 4), and the number of entries remains the same. As a final check, the method \textit{check\_NAN} is applied to the cleaned data, the result is as expected and is shown in Figure \ref{fig6}:
 	
 	\begin{figure}[h]
 	\centering
@@ -118,8 +133,16 @@ Since, the goal of the analysis is to find out how casual riders differ from mem
 	\end{figure}
 	
 	\item \textit{prepare\_data}:\\
-	Now that the data is clean and in the correct format, we can extract the required information for analysis. First, the method \textit{prepare\_data} adds a new column \textit{ride\_length} which is the difference between the columns \textit{ended\_at} and \textit{started\_at}. Second, 
-\end{itemize} 
+	Now that the data is clean and in the correct format, we can extract the required information for analysis. The method \textit{prepare\_data} adds two new columns: 1. \textit{ride\_length}: the difference between the columns \textit{ended\_at} and \textit{started\_at}, 2. \textit{day\_of\_week}: extracted from the date in \textit{started\_at}. Figure \ref{fig7} shows the first and last 5 entries of the data[``May"] after cleaning and preparation.
+
+	\begin{figure}[h]
+	\hspace{1cm}
+	\includegraphics[width=5.8 in, height = 1.8 in]{imgMay2.png}
+	\caption{First and last 5 entries of bike rides from May after cleaning and preparation}
+	\label{fig6}
+	\end{figure}
+	
+	\end{itemize}
 
 \section*{Analysis:}
 
